--- a/config/database.yml
+++ b/config/database.yml
@@ -22,4 +22,5 @@ test:
 
 production:
   <<: *default
-  database: db/production.sqlite3
+  database: calcentral_frontend_production
+  adapter: postgresql
