--- a/.travis.yml
+++ b/.travis.yml
@@ -1,8 +1,8 @@
 language: ruby
 rvm:
-  - 2.4
+  - 2.4.0
 script:
-  - bundle install - jobs=3 - retry=3
+  - bundle install
   - bundle exec rspec
   - bundle exec cucumber
 
