--- a/.travis.yml
+++ b/.travis.yml
@@ -12,9 +12,7 @@ before_install:
   - chmod +x ./cc-test-reporter
   - ./cc-test-reporter before-build
 script:
-  - bundle install
-  - bundle exec rspec
-  - bundle exec cucumber
+  - bundle exec rake
 after_script:
   - ./cc-test-reporter after-build --exit-code $TRAVIS_TEST_RESULT
 
