--- a/.travis.yml
+++ b/.travis.yml
@@ -13,6 +13,8 @@ before_install:
   - ./cc-test-reporter before-build
 script:
   - bundle exec rake
+  - ./cc-test-reporter format-coverage --output coverage/codeclimate.json
 after_script:
+  - ./cc-test-reporter upload-coverage
   - ./cc-test-reporter after-build --exit-code $TRAVIS_TEST_RESULT
 
