--- a/.travis.yml
+++ b/.travis.yml
@@ -12,7 +12,7 @@ before_install:
   - chmod +x ./cc-test-reporter
   - ./cc-test-reporter before-build
 script:
-  - bundle exec rake
+  - bundle exec rake test
   - ./cc-test-reporter format-coverage --output coverage/codeclimate.json
 after_script:
   - ./cc-test-reporter upload-coverage
